Minor alignment fix to page-card

--- a/src/App.scss
+++ b/src/App.scss
@@ -192,13 +192,12 @@ img.logo {
 
 	.page-card-3 {
 		flex: 0 1 324px;
-    	padding: 12px;
-		margin-bottom: 12px;
+    	margin: 12px;
+		background-color: rgba(255,255,255,0.2);
+		border-radius: 6px;
 
 		.page-card-wrapper {
 			padding: 12px 12px 24px 12px;
-			border-radius: 6px;
-			background-color: rgba(255,255,255,0.2);
 			text-align: center;
 			height: calc(100% - 24px);
 
